--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
   "extends": "airbnb",
   "globals": {
-    "document": true
+    "document": true,
+    "window": true
+  },
+  "rules": {
+    "react/jsx-filename-extension": 0,
+    "import/no-extraneous-dependencies": 0
   }
 }
