--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "babel": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.4.0"
   },
   "dependencies": {
     "redux": "^3.7.2",
