--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "redux-logger": "^3.0.6",
+    "css-loader": "^0.28.7",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "node-sass": "^4.7.2",
+    "redux-logger": "^3.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0"
   },
   "dependencies": {
     "redux": "^3.7.2",
